fix: align with UNDRR styles and modernize table, breadcrumb (#423)
* fix: align with UNDRR styles and modernize table, breadcrumb

For https://gitlab.com/undrr/web-backlog/-/issues/2235 -- further gaps in UNDRR.org and Mangrove styles were identified

* chore: missed file

* chore: update h1, h2 to be bold

* Linting

* fix: ensure ToC component works in storybook/React without a full page nav event.

* content: welcome guide

---------

--- a/stories/assets/scss/_foundational.scss
+++ b/stories/assets/scss/_foundational.scss
@@ -13,14 +13,14 @@ html {
 }
 
 body {
-  color: $mg-color-black;
+  color: $mg-color-text;
   font-family: $mg-font-family;
   font-size: $mg-font-size-300;
-  line-height: $mg-font-line-height-500;
+  line-height: $mg-font-line-height-700;
 
-  @include devicebreak(medium) {
-    font-size: $mg-font-size-300;
-  }
+  // @include devicebreak(medium) {
+  //   font-size: $mg-font-size-300;
+  // }
 }
 
 button {
@@ -49,6 +49,7 @@ h1 {
   letter-spacing: 0.06rem;
   line-height: 1.08;
   text-wrap: balance;
+  font-weight: 700;
 
   @include devicebreak(medium) {
     font-size: 5.125rem;
@@ -65,11 +66,7 @@ h2 {
   line-height: 1.1;
 
   @include devicebreak(medium) {
-    font-size: 2.813rem;
-  }
-
-  @include devicebreak(large) {
-    font-size: 3.438rem;
+    font-size: 2.6rem;
   }
 }
 
@@ -84,8 +81,8 @@ h3 {
 }
 
 h4 {
-  font-size: 1.563rem;
-  font-weight: 400;
+  font-size: $mg-font-size-200;
+  font-weight: 600;
   line-height: 1.15;
 
   @include devicebreak(medium) {
@@ -95,7 +92,7 @@ h4 {
 
 h5 {
   font-size: $mg-font-size-200;
-  font-weight: 400;
+  font-weight: 600;
   line-height: 1.15;
 
   @include devicebreak(medium) {
@@ -197,99 +194,99 @@ a {
 }
 
 // burmese lang
-:lang(my) {
-  body {
-    font-family: $mg-font-family;
-    line-height: 1.7;
-  }
+// :lang(my) {
+//   body {
+//     font-family: $mg-font-family;
+//     line-height: 1.7;
+//   }
 
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    line-height: 1.7;
-  }
+//   h1,
+//   h2,
+//   h3,
+//   h4,
+//   h5,
+//   h6 {
+//     line-height: 1.7;
+//   }
 
-  h1 {
-    font-family: $mg-font-family;
-    font-size: 2.625rem;
+//   h1 {
+//     font-family: $mg-font-family;
+//     font-size: 2.625rem;
 
-    @include devicebreak(medium) {
-      font-size: 3.875rem;
-    }
+//     @include devicebreak(medium) {
+//       font-size: 3.875rem;
+//     }
 
-    @include devicebreak(large) {
-      font-size: 5rem;
-    }
-  }
+//     @include devicebreak(large) {
+//       font-size: 5rem;
+//     }
+//   }
 
-  h2 {
-    font-size: 2rem;
+//   h2 {
+//     font-size: 2rem;
 
-    @include devicebreak(medium) {
-      font-size: 2.188rem;
-    }
+//     @include devicebreak(medium) {
+//       font-size: 2.188rem;
+//     }
 
-    @include devicebreak(large) {
-      font-size: 2.813rem;
-    }
-  }
+//     @include devicebreak(large) {
+//       font-size: 2.813rem;
+//     }
+//   }
 
-  h4 {
-    font-size: 1.3rem;
+//   h4 {
+//     font-size: 1.3rem;
 
-    @include devicebreak(medium) {
-      font-size: 1.8rem;
-    }
-  }
+//     @include devicebreak(medium) {
+//       font-size: 1.8rem;
+//     }
+//   }
 
-  h5 {
-    font-size: $mg-font-size-400;
+//   h5 {
+//     font-size: $mg-font-size-400;
 
-    @include devicebreak(medium) {
-      font-size: 1.375rem;
-    }
-  }
+//     @include devicebreak(medium) {
+//       font-size: 1.375rem;
+//     }
+//   }
 
-  p {
-    font-size: $mg-font-size-200;
-    line-height: 1.7;
+//   p {
+//     font-size: $mg-font-size-200;
+//     line-height: 1.7;
 
-    @include devicebreak(medium) {
-      font-size: $mg-font-size-300;
-    }
-  }
+//     @include devicebreak(medium) {
+//       font-size: $mg-font-size-300;
+//     }
+//   }
 
-  ul li,
-  ol li,
-  dl {
-    font-size: 0.875rem;
-    line-height: 1.9;
+//   ul li,
+//   ol li,
+//   dl {
+//     font-size: 0.875rem;
+//     line-height: 1.9;
 
-    @include devicebreak(medium) {
-      font-size: 1.125rem;
-    }
-  }
+//     @include devicebreak(medium) {
+//       font-size: 1.125rem;
+//     }
+//   }
 
-  .sbdocs {
-    .sbdocs-content,
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6,
-    p {
-      font-family: $mg-font-family;
-    }
+//   .sbdocs {
+//     .sbdocs-content,
+//     h1,
+//     h2,
+//     h3,
+//     h4,
+//     h5,
+//     h6,
+//     p {
+//       font-family: $mg-font-family;
+//     }
 
-    .sbdocs-h1 {
-      font-size: $mg-spacing-150;
-    }
-  }
-}
+//     .sbdocs-h1 {
+//       font-size: $mg-spacing-150;
+//     }
+//   }
+// }
 
 [dir="rtl"] {
   ul,
